--- a/akan-names/index.html
+++ b/akan-names/index.html
@@ -12,6 +12,9 @@
 
 <body>
     <div class="container">
+        <div class="jumbotron">
+            <h1>AKAN NAMES</h1>
+        </div>
         <div class="form">
             <div class="form-group">
                 <label for="date">century</label>
