add background image

--- a/akan-names/index.html
+++ b/akan-names/index.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -39,11 +40,7 @@
                     <input type="radio" name="gender" value="female" id="female"> Female<br>
             </form>
                 
-            </div>
-            <!--<div class="radio-buttons">
-                    <input type="radio" id="male"> Male
-                    <input type="radio" > Female
-            </div>-->
+            </div> 
             <button type="submit" class="btn btn-primary" onclick="checkDayOfWeek()">Submit</button>
         </div>
 
