change input tab position

--- a/akan-names/index.html
+++ b/akan-names/index.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="script.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Notable&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -19,8 +21,8 @@
                 <h1>AKAN NAMES</h1>
             </div>
 
-            <div class="form">
-                <div class="form-group">
+            <div class="form col-sm-6 offset-sm-3 text-center">
+                <div class="form-group align-center">
                     <label for="date">century</label>
                     <input type="text" class="form-control" placeholder="input" id="century">
                 </div>
