change font sizes and color

--- a/akan-names/index.html
+++ b/akan-names/index.html
@@ -8,8 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="script.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Notable&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Notable|Permanent+Marker&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 
