--- a/akan-names/index.html
+++ b/akan-names/index.html
@@ -18,6 +18,9 @@
         <div class="container-fluid">
             <div class="jumbotron">
                 <h1>AKAN NAMES</h1>
+                <p>Akan names are derived from Ghanian culture. 
+                   Frequently in Ghana, children are given their first name as a 'day name' 
+                   which corresponds to the day in the week they were born.</p>
             </div>
 
             <div class="form col-sm-6 offset-sm-3 text-center">
@@ -39,7 +42,7 @@
                 </div>
                 <div class="radio-buttons">
                     <form>
-                        <p>PLEASE SELECT YOUR GENDER:</p>
+                        <h2>PLEASE SELECT YOUR GENDER:</h2>
                         <input type="radio" name="gender" value="male" id="male"> Male<br>
                         <input type="radio" name="gender" value="female" id="female"> Female<br>
                     </form>
@@ -49,6 +52,11 @@
             </div>
 
             <h1 id="result"></h1>
+
+            </div>
+            
+
+            </div>
 
         </div>
     </div>
