--- a/akan-names/index.html
+++ b/akan-names/index.html
@@ -48,10 +48,10 @@
                     </form>
 
                 </div>
-                <button type="submit" class="btn btn-primary" onclick="checkDayOfWeek()">Submit</button>
+                <a href="#result"><button type="button" name="button" class="btn btn-dark" onclick="checkDayOfWeek();">Calculate Day</button></a>
             </div>
 
-            <h1 id="result"></h1>
+            <h1 id="result">0</h1>
 
             </div>
             
