--- a/akan-names/index.html
+++ b/akan-names/index.html
@@ -14,13 +14,14 @@
 
 <body>
     <div class="overlay">
-
         <div class="container-fluid">
-            <div class="jumbotron">
+            <div class="content">
+
                 <h1>AKAN NAMES</h1>
-                <p>Akan names are derived from Ghanian culture. 
-                   Frequently in Ghana, children are given their first name as a 'day name' 
-                   which corresponds to the day in the week they were born.</p>
+                <p>Akan names are derived from Ghanian culture.
+                    Frequently in Ghana, children are given their first name as a 'day name'
+                    which corresponds to the day in the week they were born. Fill in your date of
+                    birth and gender to find out your akan name below:</p>
             </div>
 
             <div class="form col-sm-4 offset-sm-3 text-center">
@@ -48,17 +49,18 @@
                     </form>
 
                 </div>
-                <a href="#result"><button type="button" name="button" class="btn btn-dark" onclick="checkDayOfWeek();">Calculate Day</button></a>
+                <a href="#result"><button type="button" name="button" class="btn btn-dark"
+                        onclick="checkDayOfWeek();">Calculate Day</button></a>
             </div>
 
             <h1 id="result">0</h1>
 
-            </div>
-            
-
-            </div>
-
         </div>
+
+
+    </div>
+
+    </div>
     </div>
 </body>
 
