--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
             <div class="form col-sm-4 offset-sm-3 text-center" onsubmit="validation();">
                 <div class="form-group align-center">
                     <label for="date">century</label>
-                    <input type="text" class="form-control" placeholder="input" id="century">
+                    <input type="text" class="form-control" placeholder="Enter century (Example 19)" id="century">
                 </div>
                 <div class="form-group">
                     <label for="disabledSelect">year</label>
-                    <input type="text" class="form-control" placeholder="input" id="year">
+                    <input type="text" class="form-control" placeholder="Enter year (Example 20)" id="year">
                 </div>
                 <div class="form-group">
                     <label for="date">month</label>
-                    <input type="text" class="form-control" placeholder="input" id="month">
+                    <input type="text" class="form-control" placeholder="Enter month (Example 12)" id="month">
                 </div>
                 <div class="form-group">
                     <label for="disabledSelect">day of month</label>
-                    <input type="text" class="form-control" placeholder="input" id="day of month">
+                    <input type="text" class="form-control" placeholder="Enter date (Exampe 1)" id="day of month">
                 </div>
                 <div class="radio-buttons">
                     <form>
